# processing

./: .gitignore  CLAUDE.md  Makefile  README.md  environment.yml  kindle_ocr.py  main.py  pyproject.toml  requirements.txt
config/: capture.example.yml  defaults.example.env  pipeline.example.yml
scripts/: bootstrap_conda.sh
src/kindle_ocr/: __init__.py  capture.py  cli.py  config.py  ocr.py  pdf.py  pipeline.py  rag.py
src/kindle_ocr/drivers/: __init__.py  macos_osa.py
